// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggest (Snapshot) Suggest renders with results [change state] 1`] = `
<div>
  <ul
    className="suggest"
  >
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone"
      >
        iphone
      </a>
    </li>
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone 2"
      >
        iphone 2
      </a>
    </li>
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone 3"
      >
        iphone 3
      </a>
    </li>
  </ul>
</div>
`;

exports[`Suggest (Snapshot) Suggest renders with results [componentWillReceiveProps] 1`] = `
<div>
  <ul
    className="suggest"
  >
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone 5"
      >
        iphone 5
      </a>
    </li>
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone 6"
      >
        iphone 6
      </a>
    </li>
    <li
      className="suggest__item"
    >
      <a
        href="/app/search?q=iphone 7"
      >
        iphone 7
      </a>
    </li>
  </ul>
</div>
`;

exports[`Suggest (Snapshot) Suggest renders without results 1`] = `<div />`;
